--- a/OnlineShopping/src/main/webapp/assets/css/shop-homepage.css
+++ b/OnlineShopping/src/main/webapp/assets/css/shop-homepage.css
@@ -40,3 +40,17 @@ height: 60px;
 	position:relative;
 	min-height:100%;
 }
+
+
+/* .breadcrumb {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	padding: 0.75rem 1rem;
+	margin-bottom: 1rem;
+	list-style: none;
+	background-color: #e9ecef;
+	border-radius: 0.25rem
+} */
